--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -1,8 +1,8 @@
-body {
-    background-color: #E9E5DB;
+.body {
+  background-color: #e9e5db;
 }
 @media (max-width: 850px) {
-    .leftBox {
-      display: none;
-    }
+  .leftBox {
+    display: none;
   }
+}
