changed some of the css for the welcome page and login

--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -1,5 +1,8 @@
-.body {
-  background-color: #e9e5db;
+.header-body {
+  text-align: center;
+}
+.body-sub {
+  text-align: center;
 }
 @media (max-width: 850px) {
   .leftBox {
